[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the LSM303C (accelerometer + compass)"
documentation = "https://docs.rs/lsm303c"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "MEMS"]
license = "MIT OR Apache-2.0"
name = "lsm303c"
repository = "https://github.com/copterust/lsm303c"
version = "0.2.1-alpha.0"

[dependencies]
embedded-hal = "0.2.1"

[dependencies.cast]
default-features = false
version = "0.2.2"
